--- a/Controller/src/main/resources/templates/navbar/__navbar.html
+++ b/Controller/src/main/resources/templates/navbar/__navbar.html
@@ -15,7 +15,7 @@
     </button>
 
     <a class="navbar-brand ml-4 text-dark" href="#">
-        <h3><b>KhmerHowTo</b></h3>
+        <h3 class="icon-linear-color"><b>KhmerHowTo</b></h3>
     </a>
     <div class="mx-auto  text-center w-75 d-none d-lg-block">
         <input type="text" class="form-control-one-line w-50" placeholder="&nbsp;&nbsp; Search">
@@ -51,22 +51,24 @@
             </li>
         </ul>
         <ul class="d-md-block d-lg-none">
-            <li class="list-group-item text-center">
+            <li class="list-group-item">
                 <a class="nav-link text-dark" href="#">
-                    <i class="material-icons-new outline-home"></i>
-                    <h5>Home</h5>
+                    
+                    <h5 class="icon-linear-color"><sub><i class="material-icons-new outline-home mr-2"></i></sub> Home</h5>
                 </a>
             </li>
-            <li class="list-group-item text-center">
-                <a class="nav-link text-center text-dark" href="#">
-                    <i class="material-icons-new outline-library_books md-36"></i>
-                    <h5>Category</h5>
+            <li class="list-group-item ">
+                <a class="nav-link text-dark" href="#">
+                    
+                    <h5 class=" icon-linear-color"><sub><i class="material-icons-new outline-library_books md-36 mr-2"></i></sub> Category</h5>
 
                 </a>
             </li>
             <li class="list-group-item text-center">
-                <i class="material-icons-new outline-notifications"></i>
-                <p>Notification</p>
+                <a class="nav-link text-dark ">
+                    <h5 class="text-left icon-linear-color"><sub><i class="material-icons-new outline-notifications mr-2 "></i></sub> Notification</h5>
+                </a>
+               
             </li>
             
         </ul> 
