--- a/Controller/src/main/resources/templates/admin/admin-user.html
+++ b/Controller/src/main/resources/templates/admin/admin-user.html
@@ -39,70 +39,14 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
             </tr>
             </thead>
             <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td class=""><img th:src="@{/image-static/smile.png}" class=" profile-image img-fluid rounded-circle " alt="Cinque Terre"></td>
-                <td>Madame Nich</td>
-                <td>madamenich@gmail.com</td>
-                <td>096-300-4126</td>
+            <tr th:each="user1:${users}">
+                <th scope="row" th:text="${user1.id}"></th>
+                <td class=""><img th:src="@{${user1.getProfilePicture()}}" class=" profile-image img-fluid rounded-circle " alt="user-profile"></td>
+                <td th:text="${user1.name}"></td>
+                <td th:text="${user1.email}"></td>
+                <td th:text="${user1.phoneNumber}"></td>
                 <td>
-                    <button class="btn  btn-outline-primary btn-sm"><i class="material-icons-new outline-edit ">
-
-                    </i></button>
-
-
-                </td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td class=""><img th:src="@{/image-static/smile.png}" class=" profile-image img-fluid rounded-circle " alt="Cinque Terre"></td>
-                <td>Madame Nich</td>
-                <td>madamenich@gmail.com</td>
-                <td>096-300-4126</td>
-                <td>
-                    <button class="btn  btn-outline-primary btn-sm"><i class="material-icons-new outline-edit ">
-
-                    </i></button>
-
-
-                </td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td class=""><img th:src="@{/image-static/smile.png}" class=" profile-image img-fluid rounded-circle " alt="Cinque Terre"></td>
-                <td>Madame Nich</td>
-                <td>madamenich@gmail.com</td>
-                <td>096-300-4126</td>
-                <td>
-                    <button class="btn  btn-outline-primary btn-sm"><i class="material-icons-new outline-edit ">
-
-                    </i></button>
-
-
-                </td>
-            </tr>
-            <tr>
-                <th scope="row">4</th>
-                <td class=""><img th:src="@{/image-static/smile.png}" class=" profile-image img-fluid rounded-circle " alt="Cinque Terre"></td>
-                <td>Madame Nich</td>
-                <td>madamenich@gmail.com</td>
-                <td>096-300-4126</td>
-                <td>
-                    <button class="btn  btn-outline-primary btn-sm"><i class="material-icons-new outline-edit ">
-
-                    </i></button>
-
-
-                </td>
-            </tr>
-            <tr>
-                <th scope="row">5</th>
-                <td class=""><img th:src="@{/image-static/smile.png}" class=" profile-image img-fluid rounded-circle " alt="Cinque Terre"></td>
-                <td>Madame Nich</td>
-                <td>madamenich@gmail.com</td>
-                <td>096-300-4126</td>
-                <td>
-                    <button class="btn  btn-outline-primary btn-sm"><i class="material-icons-new outline-edit ">
+                    <button class="btn  btn-outline-primary btn-sm" ><i class="material-icons-new outline-edit ">
 
                     </i></button>
 
@@ -125,17 +69,17 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     <div class="">
         <nav aria-label="Page navigation example" class="">
             <ul class="pagination justify-content-center">
-                <li class="page-item">
-                    <a class="page-link" href="#" aria-label="Previous">
+                <li class="page-item" th:if="${page.hasPrevious()}">
+                    <a class="page-link" th:href="@{/(page=${page.number-1},size=${page.size})}" aria-label="Previous">
                         <span aria-hidden="true">&laquo;</span>
                         <span class="sr-only">Previous</span>
                     </a>
                 </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item">
-                    <a class="page-link" href="#" aria-label="Next">
+                <li class="page-item" th:each="i: ${#numbers.sequence(0, page.totalPages - 1)}"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" th:if="${page.number == i}" >[[${i}+1]]</a></li>
+<!--                <li class="page-item"><a class="page-link"th:unless="${page.number == i}" ></a></li>-->
+                <li class="page-item"  th:if="${page.hasNext()}">
+                    <a class="page-link" href="#" aria-label="Next" th:href="@{/(page=${page.number+1},size=${page.size})}">
                         <span aria-hidden="true">&raquo;</span>
                         <span class="sr-only">Next</span>
                     </a>
