add link to navbar extra custom responsive

--- a/Controller/src/main/resources/templates/admin/admin-category.html
+++ b/Controller/src/main/resources/templates/admin/admin-category.html
@@ -28,7 +28,7 @@
             box-shadow: 05px 10px 18px rgba(33,33,33,.2); 
             }
             .card{
-                width: 15%;
+                width: 13%;
                 margin-bottom: 3%;
             }
             @media only screen and (max-width: 992px) {
@@ -38,7 +38,7 @@
             }
             </style>
             <!-- UPPER DIV -->
-            <div class="d-flex align-items-center justify-content-around bg-color-two right-side-bar-upper-div">
+            <div class="d-flex align-items-center justify-content-around bg-color-two right-side-bar-upper-div" style="height: 40vh;">
                 <div class="h-50 align-items-center">
                     <h1 class="my-3">
                         <b>Category List</b>
@@ -48,7 +48,7 @@
                     <input type="text" class="form-control-one-line  my-2  " placeholder="  find your category">
                 </div>
                 <div class="p-3 text-center hover-highlight-for-click" id="new_category">
-                    <img src="/image-static/content.svg" class="card-img-top text-center" style="max-width: 150px;" alt="...">
+                    <img src="/icon/article-v1.svg" class="card-img-top text-center" style="max-width: 150px;" alt="...">
                 </div>
             </div>
             <!-- UPPER DIV -->
@@ -60,17 +60,17 @@
             <!-- MIDDLE Div -->
             <!-- FOOTER DIV  -->
             <div class="d-flex flex-wrap justify-content-around ">
-                <div class="card bg-color-two p-2 hover-white-highlight-for-click" style="">
+                <div class="card bg-color-two hover-white-highlight-for-click" style="">
                     <div class="m-4">
                         <img src="/image-static/machine-learning.svg" class="card-img-top" alt="...">
                     </div>
-                    <div class="card-body">
+                    <div class="card-body ">
                         <h6 class="card-title text-center">
                             <b>Machine Learning</b>
                         </h6>
                     </div>
                 </div>
-                <div class="card bg-color-two p-2 hover-white-highlight-for-click" style="">
+                <div class="card bg-color-two hover-white-highlight-for-click" style="">
                     <div class="m-4" >
                         <img src="/image-static/machine-learning.svg" class="card-img-top" alt="...">
                     </div>
@@ -80,7 +80,7 @@
                         </h6>
                     </div>
                 </div>
-                <div class="card bg-color-two p-2 hover-white-highlight-for-click" style="">
+                <div class="card bg-color-two hover-white-highlight-for-click" style="">
                     <div class="m-4">
                         <img src="/image-static/machine-learning.svg" class="card-img-top" alt="...">
                     </div>
@@ -90,7 +90,7 @@
                         </h6>
                     </div>
                 </div>
-                <div class="card bg-color-two p-2 hover-white-highlight-for-click" style="">
+                <div class="card bg-color-two hover-white-highlight-for-click" style="">
                     <div class="m-4">
                         <img src="/image-static/machine-learning.svg" class="card-img-top" alt="...">
                     </div>
@@ -100,7 +100,7 @@
                         </h6>
                     </div>
                 </div>
-                <div class="card bg-color-two p-2 hover-white-highlight-for-click" style="">
+                <div class="card bg-color-two hover-white-highlight-for-click" style="">
                     <div class="m-4">
                         <img src="/image-static/machine-learning.svg" class="card-img-top" alt="...">
                     </div>
@@ -110,7 +110,7 @@
                         </h6>
                     </div>
                 </div>
-                <div class="card bg-color-two p-2 hover-white-highlight-for-click" style="">
+                <div class="card bg-color-two hover-white-highlight-for-click" style="">
                     <div class="m-4">
                         <img src="/image-static/machine-learning.svg" class="card-img-top" alt="...">
                     </div>
