--- a/Controller/src/main/resources/templates/navbar/__navbar.html
+++ b/Controller/src/main/resources/templates/navbar/__navbar.html
@@ -14,7 +14,7 @@
         </span>
     </button>
 
-    <a class="navbar-brand ml-4 text-dark" href="#">
+    <a class="navbar-brand ml-4 text-dark" href="/homepage">
         <h3 class="icon-linear-color"><b>KhmerHowTo</b></h3>
     </a>
     <div class="mx-auto  text-center w-75 d-none d-lg-block">
@@ -30,17 +30,18 @@
                 last 3 = text-center    
              -->
             <li class="nav-item  d-none d-lg-block">
-                <a class="nav-link text-dark" href="#">
+                <a class="nav-link text-dark" href="/homepage">
                     <h5 class="icon-linear-color">Home</h5>
                 </a>
             </li>
             <li class="nav-item  d-none d-lg-block">
-                <a class="nav-link text-center text-dark" href="#">
+                <a class="nav-link text-center text-dark" href="/contentByCategory">
                     <h5 class="icon-linear-color">Category</h5>
                 </a>
             </li>
             <li class="nav-item  ">
                 <a class="nav-link text-center  d-none d-lg-block" href="#">  
+                    
                     <img class="" src="/icon/notification-navbar-v2.svg" style="width: 28px; height: 28px;" alt="">
                 </a>
             </li>
@@ -52,13 +53,13 @@
         </ul>
         <ul class="d-md-block d-lg-none">
             <li class="list-group-item">
-                <a class="nav-link text-dark" href="#">
+                <a class="nav-link text-dark" href="/homepage">
                     
                     <h5 class="icon-linear-color"><sub><i class="material-icons-new outline-home mr-2"></i></sub> Home</h5>
                 </a>
             </li>
             <li class="list-group-item ">
-                <a class="nav-link text-dark" href="#">
+                <a class="nav-link text-dark" href="/contentByCategory">
                     
                     <h5 class=" icon-linear-color"><sub><i class="material-icons-new outline-library_books md-36 mr-2"></i></sub> Category</h5>
 
