--- a/Controller/src/main/resources/templates/navbar/__admin_navbar.html
+++ b/Controller/src/main/resources/templates/navbar/__admin_navbar.html
@@ -29,12 +29,12 @@
                 last 3 = text-center    
              -->
             <li class="nav-item d-none d-lg-block">
-                <a class="nav-link text-dark" href="#">
+                <a class="nav-link text-dark" href="/homepage">
                     <h5 class="icon-linear-color">Home</h5>
                 </a>
             </li>
             <li class="nav-item d-none d-lg-block">
-                <a class="nav-link text-center text-dark" href="#">
+                <a class="nav-link text-center text-dark" href="/admin">
                     <h5 class="icon-linear-color">Admin</h5 >
                 </a>
             </li>
@@ -53,7 +53,7 @@
         </ul>
         <ul class="d-md-block d-lg-none left-align">
             <li class="list-group-item ">
-                <a class="nav-link text-dark" href="#">
+                <a class="nav-link text-dark" href="/homepage">
                     
                     <p>
                         <sub>
@@ -62,7 +62,7 @@
                 </a>
             </li>
             <li class="list-group-item ">
-                <a class="nav-link  text-dark" href="#">
+                <a class="nav-link  text-dark" href="/admin">
                   
                     <p>
                         <sub>
@@ -74,7 +74,7 @@
                 </a>
             </li>
             <li class="list-group-item ">
-                <a class="nav-link  text-dark" href="#">
+                <a class="nav-link  text-dark" href="/admin/article">
                     <p>
                         <sub>
                             <i class="material-icons-new outline-library_books"></i>
@@ -84,7 +84,7 @@
                 </a>    
             </li>
             <li class="list-group-item ">
-                <a class="nav-link  text-dark" href="#">
+                <a class="nav-link  text-dark" href="/admin/user">
                     <p>
                         <sub>
                         <i class="material-icons-new outline-people"></i>
@@ -95,7 +95,7 @@
                 </a>
                  </li>
             <li class="list-group-item ">
-                <a class="nav-link  text-dark" href="#">
+                <a class="nav-link  text-dark" href="/admin/question">
                     <p>
                     <sub>
                         <i class="material-icons-new outline-question_answer"></i>
@@ -106,7 +106,7 @@
                 </a>
             </li>
             <li class="list-group-item ">
-                <a class="nav-link  text-dark" href="#">
+                <a class="nav-link  text-dark" href="/admin/feedback">
                     <p>
                         <sub>
                         <i class="material-icons-new outline-feedback"></i>
@@ -118,7 +118,7 @@
                 </a>
             </li>
             <li class="list-group-item ">
-                <a class="nav-link  text-dark" href="#">
+                <a class="nav-link  text-dark" href="/admin/customize">
                     <p>
                     <sub>
                     <i class="material-icons-new outline-settings_applications"></i>
