--- a/Controller/src/main/resources/templates/home-layout.html
+++ b/Controller/src/main/resources/templates/home-layout.html
@@ -20,7 +20,8 @@
 <body>
     <div th:replace="~{navbar/__navbar}"></div>
     <div class="" layout:fragment="content"></div>
+    <div th:replace="~{footer/__footer}"></div>
     <th:block th:include="~{fragment/__javascript_link}"></th:block>
-
+  
 </body>
 </html>
