--- a/Controller/src/main/resources/static/css/maTooltip.css
+++ b/Controller/src/main/resources/static/css/maTooltip.css
@@ -11,8 +11,8 @@
   display: block;
   visibility: visible;
   padding: 5px;
-  border-radius: 20px;
-  opacity: 0.8; /* Shall be animated TO from 0 ? */
+  
+  opacity: 1; /* Shall be animated TO from 0 ? */
   
   /*
    * Alt 1:
@@ -61,7 +61,7 @@
   margin-top: -5px;
   border-top: 5px solid transparent;
   border-bottom: 5px solid transparent;
-  border-left: 5px solid #000;
+  border-left: 5px solid rgb(0, 0, 0);
 }
 
 .maTooltip-TOP .maTooltip-arrow
@@ -92,22 +92,21 @@
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   border-bottom: 5px solid #000;
-  border-radius: 20px !important;
 }
 
 .maTooltip-contents
 {
   max-width: 200px;
   padding: 3px 8px;
-  border-radius: 20px !important;
+
   color: #FFF;
 
   text-align: center;
   text-decoration: none;
-  background-color: #000;
+  background-color: rgb(255, 255, 255);
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
-  border-radius: 4px;
+  border-radius: 17px;
   
   border: 1px solid #000;
   
