--- a/Controller/src/main/resources/templates/sign-up.html
+++ b/Controller/src/main/resources/templates/sign-up.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <th:block th:include="~{fragment/__bootstrap_link}"></th:block>
 
@@ -17,25 +18,25 @@
             </div>
             <div class="col-sm h-100 my-auto" style="padding-left: 14%; padding-right: 14%; ">
                 <form class="p-form" style="text-align: center;">
-                    <h5 style="line-height: 60px; font-size: x-large;" class="font-weight-bold">How To Khmer</h5>
+                    <h5 style="line-height: 60px; margin-bottom: 3px; font-size: x-large;" class="font-weight-bold"> Khmer How To</h5>
                     <!-- <span class="title-log ">Khmer How To</span> -->
                     <p class="line-m" style="line-height: 100%; font-size: small;">Sign up with Khmer How To
-                        account</p>
+                        Account</p>
 
-                    <div style=" text-align: start; margin-bottom: 10%; margin-top: 10%;">
-                        <span style="text-align: left; margin-bottom: 0px !important;font-size: small ">Name</span>
-                        <input style="text-align: left; margin-top: 9px; font-size: small" type="text"
+                    <div style=" text-align: start; margin-bottom: 7%; margin-top: 7%;">
+                        <span style="text-align: left; margin-bottom: 0px !important;font-size: small; font-weight: 550; ">Name</span>
+                        <input style="text-align: left; margin-top: 2px; font-size: small" type="text"
                             class="t-span form-control" placeholder="Name">
                     </div>
                     <div style="text-align: start;">
-                        <span class="t-span" style="margin-bottom: 0px; font-size: small">E-mail</span>
+                        <span class="t-span" style="margin-bottom: 0px; font-size: small;font-weight: 550; ">E-mail</span>
                         <input type="text" class="t-span form-control"
-                            style="margin-top: 9px; margin-bottom: 10%; font-size: small " placeholder="ABC@gmail.com">
+                            style="margin-top: 2px; margin-bottom: 8%; font-size: small " placeholder="ABC@gmail.com">
                     </div>
 
-                    <div style="text-align: start; margin-bottom: 20px;">
+                    <div style="text-align: start; ">
 
-                        <span class="t-span" style="display: block; margin-bottom: 4px; font-size: small">Gender</span>
+                        <span class="t-span" style="display: block; margin-bottom: -1px; font-size: small;font-weight: 550; ">Gender</span>
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" style="font-size: small " type="radio"
                                 name="inlineRadioOptions" id="inlineRadio1" value="option1">
@@ -52,25 +53,29 @@
                             <label style="font-size: small " class="form-check-label" for="inlineRadio3">Other</label>
                         </div>
                     </div>
-                    <div style=" text-align: start; margin-bottom: 10%; margin-top: 7%;">
-                        <span style="text-align: left; margin-bottom: 0px !important;font-size: small ">Phone
-                            Number</span>
-                        <input style="text-align: left; margin-top: 9px; font-size: small " type="text"
-                            class="t-span form-control" placeholder="+885">
+                 
+                    <div style=" text-align: start; margin-bottom: 8%; margin-top: 5%;">
+                        <span style="text-align: left; margin-bottom: 0px !important;font-size: small;font-weight: 550;  ">Password</span>
+                        <input style="text-align: left; margin-top: 3px; font-size: small " type="password"
+                            class="t-span form-control" placeholder="Password">
                     </div>
-
+                    <div style=" text-align: start; margin-bottom: 11%; margin-top: 5%;">
+                        <span style="text-align: left; margin-bottom: 0px !important;font-size: small;font-weight: 550;  ">Confirm Password</span>
+                        <input style="text-align: left; margin-top: 3px; font-size: small " type="password"
+                            class="t-span form-control" placeholder="Password">
+                    </div>
                     <div class="container-fluid mb-2">
                         <div class="row">
                             <div class="col-6 px-0 text-left">
-                                <button type="submit" class="btn btn-primary left-al"><span class="t-span">Login</span>
+                                <button style="width: 90px;" type="submit" class="btn btn-primary left-al"><span class="t-span">Sign Up</span>
                                 </button>
                             </div>
                             <div class="col-6 px-0 text-right">
-                                <button type="submit" class="btn btn-secondary right-al"><span class="t-span">Sign Up</span></button>
+                                <button style="width: 90px;background-color: #a9a9a954;" type="submit" class="btn right-al"><span class="t-span">Log in</span></button>
                             </div>
                         </div>
                     </div>
-                    <div style="height: 48px;">
+                    <div style="margin-bottom: 3%; font-size: small;">
                         or Sign up With
                     </div>
 
