add post button

--- a/Controller/src/main/resources/templates/admin/admin-article-insert.html
+++ b/Controller/src/main/resources/templates/admin/admin-article-insert.html
@@ -26,7 +26,8 @@
         </form>
         <button onclick="chooseImage()" style="position: absolute;left: 343px; margin-top: 7px; border: none; background-color: inherit;">image</button>
         <textarea name="editor1" id="hello"></textarea>
-
+        <input type="button" value="Post" class="btn btn-bd-primary">
+       
         <script th:src="@{/js/ckeditor/ckeditor.js}"></script>
         <script src="/node_module/jquery/dist/jquery.min.js"></script>
         <script>
