--- a/Controller/src/main/resources/templates/client-home.html
+++ b/Controller/src/main/resources/templates/client-home.html
@@ -65,6 +65,9 @@
                 .card {
                     margin-bottom: 2%;
                 }
+                .group-one{
+                    display: none !important;
+                }
             }
            
         </style>
