--- a/Controller/src/main/resources/templates/home-layout.html
+++ b/Controller/src/main/resources/templates/home-layout.html
@@ -23,5 +23,8 @@
     <div th:replace="~{footer/__footer}"></div>
     <th:block th:include="~{fragment/__javascript_link}"></th:block>
     <div class="" layout:fragment="content-js"></div>
+    <script>
+         
+    </script>
 </body>
 </html>
