--- a/Controller/src/main/resources/templates/navbar/__admin_left_side_bar.html
+++ b/Controller/src/main/resources/templates/navbar/__admin_left_side_bar.html
@@ -1,4 +1,5 @@
-<div class="sidebar left-side-menu-sidebar border-right bg-white w-100">
+<div class="sidebar left-side-menu-sidebar border-right w-100">
+    <span class="d-none" id="span_current_page" th:text="${CURRENT_PAGE}"></span>
     <style>
         li.list-group-item {
             padding: 0%;
@@ -7,7 +8,7 @@
             color:#b93d5c;
         }
     </style>
-    <ul class="list-group list-group-flush left-side-menu-ul ">
+    <ul class="list-group list-group-flush left-side-menu-ul "  id="left-side-menu">
         <li onclick="location.href='/admin';" class="list-group-item text-center w-100">
             <br>
             <!-- <i class="material-icons-new outline-home"></i> -->
