--- a/Controller/src/main/resources/templates/navbar/__navbar.html
+++ b/Controller/src/main/resources/templates/navbar/__navbar.html
@@ -14,6 +14,11 @@
         right: 40px;
         z-index: 10;
     }
+    .page-active {
+        border-bottom: 2px solid yellow;
+        border-width: 5px;
+    }
+
 </style>
 <nav class="navbar navbar-expand-lg bg-white border-bottom pb-0" >
     <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTopRightSide" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,12 +46,12 @@
              -->
             <li class="nav-item  d-none d-lg-block">
                 <a class="nav-link text-dark" href="/homepage">
-                    <h5 class="icon-linear-color">Home</h5>
+                    <h5 th:class="${CURRENT_PAGE == 'home'}?'icon-linear-color page-active':'icon-linear-color'" style="width: 60%;">Home</h5>
                 </a>
             </li>
             <li class="nav-item  d-none d-lg-block">
                 <a class="nav-link text-center text-dark" href="/contentByCategory">
-                    <h5 class="icon-linear-color">Category</h5>
+                    <h5 th:class="${CURRENT_PAGE == 'category'}?'icon-linear-color page-active':'icon-linear-color'"  >Category</h5>
                 </a>
             </li>
             <li class="nav-item  ">
