--- a/Controller/src/main/resources/templates/navbar/__navbar.html
+++ b/Controller/src/main/resources/templates/navbar/__navbar.html
@@ -14,6 +14,74 @@
         right: 40px;
         z-index: 10;
     }
+
+     /* Chamroeun Notification */
+     /* Chamroeun Notification */
+
+     /*.dropdown {*/
+     /*    display:inline-block;*/
+     /*    margin-left:20px;*/
+     /*    padding:10px;*/
+     /*}*/
+
+
+     /*.glyphicon-bell {*/
+
+     /*    font-size:1.5rem;*/
+     /*}*/
+
+     .notifications {
+         min-width:420px;
+     }
+
+     .notifications-wrapper {
+         overflow:auto;
+         max-height:250px;
+     }
+
+     .notification-menu-title {
+         color:#ff7788;
+         font-size:1.5rem;
+         display:inline-block;
+     }
+
+     .glyphicon-circle-arrow-right {
+         margin-left:10px;
+     }
+
+
+     .notification-heading, .notification-footer  {
+         padding:2px 10px;
+     }
+
+
+     .buttom-divider {
+         margin:5px 0;
+     }
+
+     .item-title {
+
+         font-size:1.3rem;
+         color:#000;
+
+     }
+
+     .notifications a.notifications-content {
+         text-decoration:none;
+         background:#ccc;
+
+     }
+
+     .notifications-item {
+         padding:10px;
+         margin:5px;
+         background:#ccc;
+         border-radius:4px;
+     }
+
+
+
+
 </style>
 <nav class="navbar navbar-expand-lg bg-white border-bottom pb-0" >
     <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTopRightSide" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,10 +120,9 @@
             <li class="nav-item  ">
                 <div class="dropdown ">
                     <a class="nav-link text-center  d-none d-lg-block" href="#" id="notification" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        
                         <img class="" src="/icon/notification-navbar-v2.svg" style="width: 28px; height: 28px;" alt="">
                     </a>
-                    <div class="dropdown-menu dropdown-menu-customized dropdown-menu-right mt-3" style="width: 100px;" aria-labelledby="notification">
+                    <div class="notify-drop dropdown-menu dropdown-menu-customized dropdown-menu-right mt-3" style="width: 100px;" aria-labelledby="notification">
                         <ul class="list-group">
                             <li class="list-group-item" >New post From Science</li>
                             <li class="list-group-item">New post From Tech</li>
