remove extra div from navbar

--- a/Controller/src/main/resources/templates/navbar/__navbar.html
+++ b/Controller/src/main/resources/templates/navbar/__navbar.html
@@ -77,10 +77,13 @@
                     </a>
                 <div class="dropdown-menu dropdown-menu-customized dropdown-menu-right mt-3" aria-labelledby="profile">
                     <div class="card">
-                        <div class="card-title d-flex justify-content-around">
-                                <img class="" src="/icon/user-navbar-v2.svg" style="width: 30px; height: 30px;" alt="">
-                                <p> Administrator</p>
+                        <div class="card-title "></div>
+                                <div class="text-center">
+                                    <img class="" src="/icon/user-navbar-v2.svg" style="width: 50px; height: 50px;" alt="">
+                                    <br>
+                                    <h6> Administrator</h6>
                             
+                                </div>
                         </div>
                         <div class="card-body">
                             <p class="">
@@ -93,7 +96,7 @@
                         </div>
                     </div>
                   </div>
-                </div>
+                
             </li>
         </ul>
         <ul class="d-md-block d-lg-none">
