--- a/Controller/src/main/resources/templates/admin/admin-article-insert.html
+++ b/Controller/src/main/resources/templates/admin/admin-article-insert.html
@@ -14,68 +14,208 @@
 
         }
 
+        * {
+            box-sizing: border-box;
+        }
+
+        body {
+            background: url(https://scotch.io/wp-content/uploads/2014/07/61.jpg);
+        }
+
+        
+
     </style>
 </head>
 
 <body>
-    <div class="content m-5" layout:fragment="content"> 
-        
+    <div class="content m-5" layout:fragment="content">
+
         <form style="display: none;" method="POST" id="frm" enctype="multipart/form-data">
             <input id="chooseImg" type="file" name="file" accept=".png, .jpg, .jpeg"><br><br>
             <button type="submit" style="display: none;" id="added">add</button>
         </form>
-        <button onclick="chooseImage()" style="position: absolute;left: 343px; margin-top: 7px; border: none; background-color: inherit;">image</button>
-        <textarea name="editor1" id="hello"></textarea>
-        <input type="button" value="Post" class="btn btn-bd-primary">
-       
-        <script th:src="@{/js/ckeditor/ckeditor.js}"></script>
-        <script src="/node_module/jquery/dist/jquery.min.js"></script>
-        <script>
-            CKEDITOR.replace('editor1');
+        <div style="background-color: #dae6ff; padding-top: 30px;" class="container-fluid">
+            <div class="row">
+                <div class="col-6">
 
-           function chooseImage(){
-               $("#chooseImg").click();
-           }
-            function getData() {
-                // $( 'textarea.editor1' ).val();
-                // // var content = CKEDITOR.instances['comment'].getData();
-                // var text = CKEDITOR.instances.editor1.getData();
-                // // alert(text)
-                $("#imgInput").click()
-            }
+                    <div class="form-group">
+                        <label for="comment">Title:</label>
+                        <textarea id="mytitle" class="form-control  " style="box-sizing: border-box;
+                         width: 100% !important;"></textarea>
+                    </div>
+                </div>
+                <div class="col-6">
 
-            $("#chooseImg").change(function(){
-                $("#added").click()
-             });
+                    <form style="display: none;" method="POST" id="thumnailFrm" enctype="multipart/form-data">
+                        <input style="display: none;" type="file" value="Thumnail" accept=".png, .jpg, .jpeg" name=""
+                            id="myTh">
+                        <!-- <input id="chooseImg" type="file" name="file" accept=".png, .jpg, .jpeg"><br><br> -->
+                        <button type="submit" style="display: none;" id="addThumnail">add</button>
+                    </form>
+                    <div class="form-group">
+                        <label for="comment">Thumnail:</label>
+                        <img onclick="chooseThum()" id="thumnail" class="img-fluid form-control"
+                            style="cursor: pointer; width: 364px; height: unset; " src="/img/default.jpg" alt="">
+                    </div>
 
-            $("form").submit(function (e) {
-                event.preventDefault();
-            
-                var fd = new FormData();
-                fd.append('file', chooseImg.files[0]);
-                $.ajax({
-                    type: 'POST',
-                    url: 'http://localhost:8080/upload',
-                    data: fd,
-                    contentType: false,
-                    processData: false,
-                    success: function (data) {
-                        console.log(data);
-                        var srcimg = data["Data"]
-                        var im =
-                            `<span><img width='200px' src='http://localhost:8080/img/${srcimg}'><span>;`;
 
-                        CKEDITOR.instances.hello.insertHtml(im);
-                    },
-                    error: function (data) {
-                        console.log("error");
-                        console.log(data);
-                    }
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <button onclick="chooseImage()"
+                        style="position: absolute;left: 295px; margin-top: 10px; border: none; background-color: inherit;"><span
+                            class="cke_button_icon button__image_icon"
+                            style="background-image:url('http://localhost:8080/js/ckeditor/plugins/icons.png?t=JB9C');background-position:0 -960px;background-size:auto;">&nbsp;</span></button>
+                    <textarea name="editor1" id="editor1"></textarea>
+                </div>
+            </div>
+
+            <div class="row py-2" style="">
+                <div class="col-12"><input style="float: right; width: 100px; " onclick="getData()" type="button"
+                        value="Post" class="btn btn-primary"></div>
+            </div>
+
+
+            <script th:src="@{/js/ckeditor/ckeditor.js}"></script>
+            <script src="/node_module/jquery/dist/jquery.min.js"></script>
+            <script>
+                CKEDITOR.replace('editor1', {
+                    uiColor: '#C2D6FF',
+                    allowedContent: true
                 });
-            });
 
-        </script>
-    </div>
+                function chooseImage() {
+                    $("#chooseImg").click();
+                }
+
+                function getData() {
+                    var value = CKEDITOR.instances["editor1"].getData();
+                    // alert(value)
+
+                    var dataObj = {
+                        "body": value,
+                        "id": 9,
+                        "status": "1",
+                        "thumbnail": "string",
+                        "timestamp": 0,
+                        "title": $("#mytitle").val(),
+                        "writer": "string",
+                        "category": {
+                            "id": 1 //static
+                        }
+                    }
+                    $.ajax({
+                        type: "POST",
+                        url: "http://localhost:8080/api/contents",
+                        data: JSON.stringify(dataObj),
+                        contentType: "application/json",
+                        success: function (respone) {
+                            console.log(respone)
+                        },
+                        dataType: 'json'
+                    });
+                }
+
+
+                $("#chooseImg").change(function () {
+                    $("#added").click();
+                });
+
+                $("#frm").submit(function (e) {
+                    event.preventDefault();
+
+                    var fd = new FormData();
+                    fd.append('file', chooseImg.files[0]);
+                    $.ajax({
+                        type: 'POST',
+                        url: 'http://localhost:8080/upload',
+                        data: fd,
+                        contentType: false,
+                        processData: false,
+                        success: function (data) {
+                            console.log(data);
+                            var srcimg = data["Data"]
+                            var im =
+                                `<span><img width='200px' src='http://localhost:8080/img/${srcimg}'><span>`;
+
+                            CKEDITOR.instances.editor1.insertHtml(im);
+                        },
+                        error: function (data) {
+                            console.log("error");
+                            console.log(data);
+                        }
+                    });
+                });
+
+
+
+
+                $("#myTh").change(function () {
+
+                });
+                $("#thumnailFrm").submit(function (e) {
+                    event.preventDefault();
+
+                    var fd = new FormData();
+                    fd.append('file', myTh.files[0]);
+                    $.ajax({
+                        type: 'POST',
+                        url: 'http://localhost:8080/upload',
+                        data: fd,
+                        contentType: false,
+                        processData: false,
+                        success: function (data) {
+
+                            var srcimg = data["Data"]
+                            console.log("name img:" + srcimg);
+                            // var im =
+                            //     `<span><img width='200px' src='http://localhost:8080/img/${srcimg}'><span>`;
+
+                            // CKEDITOR.instances.editor1.insertHtml(im);
+                        },
+                        error: function (data) {
+                            console.log("error");
+                            console.log(data);
+                        }
+                    });
+                });
+
+                function chooseThum() {
+                    $("#myTh").click();
+                }
+
+                function readURL(input) {
+                    if (input.files && input.files[0]) {
+                        var reader = new FileReader();
+                        reader.onload = function (e) {
+                            $('#thumnail').attr('src', e.target.result);
+                        }
+                        reader.readAsDataURL(input.files[0]);
+                    }
+                }
+                $("#myTh").change(function () {
+                    readURL(this);
+                    $("#addThumnail").click()
+                });
+
+
+                var x = 1;
+                $(document).ready(function () {
+                    var h = $("#thumnail").height();
+                    $("#mytitle").height(h);
+                    $("#mytitle").width($("#thumnail").width());
+                    $(window).resize(function () {
+                        // $("span").text(x += 1); 
+                        var h = $("#thumnail").height();
+                        $("#mytitle").height(h);
+                        $("#mytitle").width($("#thumnail").width());
+                        // alert(h)
+                    });
+                });
+
+            </script>
+        </div>
 </body>
 
 </html>
